Sidebar Active Styling

--- a/src/components/sidebar/sidebaritem.css
+++ b/src/components/sidebar/sidebaritem.css
@@ -1,3 +1,11 @@
-.show-children {
+.hide-children {
     display: none !important;
+}
+
+.item-cursor {
+    cursor: pointer;
+}
+
+.active-item{
+    background-color: wheat;
 }
